# cosmic-passphrase

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
cosmic-passphrase-core/: Cargo.toml
cosmic-passphrase-core/src/: cache.rs  config.rs  lib.rs  output.rs
cosmic-passphrase-dialog/: Cargo.toml
cosmic-passphrase-dialog/src/: lib.rs
cosmic-ssh-askpass/: Cargo.toml
cosmic-ssh-askpass/src/: lib.rs  main.rs
cosmic-ssh-askpass/tests/: integration.rs  oo7_caching.rs
docs/: ARCHITECTURE.md  PROTOCOL.md  SECURITY.md  TESTING.md
pinentry-cosmic/: Cargo.toml
pinentry-cosmic/src/: assuan.rs  error.rs  main.rs
pinentry-cosmic/tests/: assuan_protocol.rs  oo7_caching.rs
