[package]
name = "cosmic-ssh-askpass"
version = "0.1.0"
edition = "2024"
description = "COSMIC-native passphrase dialog for SSH agent"
license = "MIT"
rust-version = "1.93"

[lib]
name = "cosmic_ssh_askpass"
path = "src/lib.rs"

[[bin]]
name = "cosmic-ssh-askpass"
path = "src/main.rs"

[dependencies]
cosmic-passphrase-core = { path = "../cosmic-passphrase-core" }
cosmic-passphrase-dialog = { path = "../cosmic-passphrase-dialog" }

[dev-dependencies]
oo7 = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
